  * softwarecenter/enums.py:
    - switch default to buy-host to software-center.ubuntu.com
    - allow override via the SOFTWARE_CENTER_BUY_HOST environment
      (useful for testing)
  * softwarecenter/backend/aptd.py:
    - make defaults for addons_{install,remove} empty lists instead
      of None to prevent crash when called with a empty argument

  [ Gary Lasker ]
  * merge lp:~mmcg069/software-center/misbehaving-pathbar-fix, fixes
    pathbar no longer shrinking to available width (LP: #625210),
    many thanks Matthew McGowan!

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 31 Aug 2010 15:35:05 -0400

software-center (2.1.14.2) maverick; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/small-things that cleans
    up no longer needed code in the carousel after mpts made 
    the background white
  * merged lp:~ilidrissi.amine/software-center/addons-provides and
    added test
  * merged lp:~kelemeng/software-center/bug625859, this fixes 
    UTF-8 character escapes (LP: #625859), many thanks!
  
  [ Lucian Adrian Grijincu ]
  * Alt-Left, Alt-Right work as Back/Forward like in all other GNOME apps
    (LP: #625745)

  [ Kiwinote ]
  * softwarecenter/apt/aptcache.py:
    - don't crash on encountering broken packages while getting deps
  
  [ Mohamed Amine IL Idrissi ]
  * softwarecenter/apt/aptcache.py: Packages that enhance a package that
    is provided by the main app are now add-ons (LP: #625252)

  [ Gary Lasker ]
  * softwarecenter/enums.py:
    - add missing CUSTOM_KEY_THUMBNAIL_URL value for software-center
      plugin to fix update-apt-xapian-index crash (LP: #626600)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 30 Aug 2010 12:45:06 +0200

software-center (2.1.14.1) maverick; urgency=low

  [ Gary Lasker ]
  * make the currency string not translatable, since it will not
    vary by locale currently (the agent always uses US$)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Aug 2010 21:12:46 +0200
