@@ -45,7 +45,7 @@ from Queue import Queue
 
 from login import LoginBackend
 
-UBUNTU_SSO_SERVICE = "https://login.staging.ubuntu.com/api/1.0"
+UBUNTU_SSO_SERVICE = "https://login.ubuntu.com/api/1.0"
 UBUNTU_SOFTWARE_CENTER_AGENT_SERVICE = BUY_SOMETHING_HOST+"/api/1.0"
 
 class EmptyObject(object):
