@@ -12,13 +12,20 @@ software-center (2.1.14.3) UNRELEASED; urgency=low
   * softwarecenter/backend/aptd.py:
     - make defaults for addons_{install,remove} empty lists instead
       of None to prevent crash when called with a empty argument
+    - use AptClinet.install_packages() instead of commit_packages()
+      for the install of commercial stuff to get the benefit of 
+      aptdaemons 03_auth_me_less patch
+  * softwarecenter/backend/restfulclient.py:
+    - point SERVICE_ROOT for the internal login service to production
+  * softwarecenter/view/appdetailsview_gtk.py:
+    - minor logging improvements
 
   [ Gary Lasker ]
   * merge lp:~mmcg069/software-center/misbehaving-pathbar-fix, fixes
     pathbar no longer shrinking to available width (LP: #625210),
     many thanks Matthew McGowan!
 
- -- Gary Lasker <gary.lasker@canonical.com>  Tue, 31 Aug 2010 15:35:05 -0400
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 01 Sep 2010 09:50:07 +0200
 
 software-center (2.1.14.2) maverick; urgency=low
 
